--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,6 @@
         <p>Welcome to the Chat App </p>
 
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-        var socket = io();
-
-        socket.on('connect', () => {
-            console.log('Connected to Server');
-        });
-
-        socket.on('disconnect', () => {
-            console.log('Disconnected with the server');
-        });
-        </script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
